--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="/treeControl.js" defer></script>
+    <link rel="stylesheet" href="/styles.css" />
     <title>JavaScript Tree</title>
-</head>
-<body style="padding: 10%;">
-    <div id="tree-wrapper" style="border-style: solid; border-color: #000000;">
-        <h3>tree root</h3>
-    </div>
-</body>
+  </head>
+  <body>
+    <div id="tree-wrapper" />
+  </body>
 </html>
