--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="treeControl.js" defer></script>
-    <link rel="stylesheet" href="styles.css" />
+    <script src="/treeControl.js" defer></script>
+    <link rel="stylesheet" href="/styles.css" />
     <title>JavaScript Tree</title>
   </head>
   <body>
+    <h2 id="title">JavaScript Tree by Hunter</h2>
+    <p id="description">
+      I hope this is acceptable improvement and that the styling is on par with
+      what you were expecting!
+    </p>
     <div id="tree-wrapper" />
   </body>
 </html>
